When you click the hint button it is now visualized with a blue color that slowly fades